Fixed label styling for dark mode

--- a/ADnD 2E Revised/2EStyle.css
+++ b/ADnD 2E Revised/2EStyle.css
@@ -553,6 +553,11 @@ input.sheet-tab + span::before
     padding: 0 0 0 0;
 }
 
+/* Dark Mode override */
+.sheet-darkmode .charsheet label {
+    color: #333;
+}
+
 .charsheet h1,
 .charsheet h2,
 .charsheet h3,
